@@ -1,11 +1,19 @@
 FlightPath 5.x Changelog
 ========================
 
+
+2017-02-19
+  Fixed bug in duplicating degrees re: groups with var hours.
+
+  Added a hook to allow modules to modify a term_id prior to getting its description.
+
+
 2017-02-11
   Fixed another bug relating to the logic of pulling up a student when two advisors are
   working on the student at the same time.
 
   Modified some logic in _FlightPath to accomodate the double advisor issue bug.
+
 
 2017-02-07
   Fixed advising session bug where advisors working at the same time on the same student might see
